// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot disable prettier 1`] = `
"
import globals from "globals";
import tseslint from "typescript-eslint"
import importPlugin from "eslint-plugin-import"
import stylistic from "@stylistic/eslint-plugin"
import eslint from "@eslint/js"    

/** @type {import('eslint').Linter.Config[]} */
export default [
  eslint.configs.recommended,
  importPlugin.flatConfigs.typescript,
  {
    files: ["**/*.ts", "**/*.tsx"],
    languageOptions: { 
      globals: {
        ...globals.node,
        ...globals.jest,
      },
      parser: tseslint.parser,
      parserOptions: {
        ecmaVersion: 2018,
        sourceType: "module",
        project: "./tsconfig.json",
      },
    },
    settings: {
      "import/parsers": {
        "@typescript-eslint/parser": [".ts", ".tsx"],
      },
      "import/resolver": {
        typescript: {
          project: "./tsconfig.json",
          alwaysTryTypes: true,
        }
      },
    },
    plugins: {
      "@typescript-eslint": tseslint,
      "import": importPlugin,
      "@stylistic": stylistic
    },
    rules: {
      "@typescript-eslint/no-require-imports": "error",
      "import/no-extraneous-dependencies": ["error",{"devDependencies":[],"optionalDependencies":false,"peerDependencies":true}],
      "import/no-unresolved": "error",
      "import/order": ["warn",{"groups":["builtin","external"],"alphabetize":{"order":"asc","caseInsensitive":true}}],
      "import/no-duplicates": "error",
      "no-shadow": "off",
      "@typescript-eslint/no-shadow": "error",
      "@stylistic/key-spacing": "error",
      "@stylistic/no-multiple-empty-lines": "error",
      "@typescript-eslint/no-floating-promises": "error",
      "no-return-await": "off",
      "@typescript-eslint/return-await": "error",
      "@stylistic/no-trailing-spaces": "error",
      "dot-notation": "error",
      "no-bitwise": "error",
      "@typescript-eslint/member-ordering": ["error",{"default":["public-static-field","public-static-method","protected-static-field","protected-static-method","private-static-field","private-static-method","field","constructor","method"]}],
      "indent": "off",
      "@stylistic/indent": ["error",2],
      "@stylistic/quotes": ["error","single",{"avoidEscape":true}],
      "@stylistic/comma-dangle": ["error","always-multiline"],
      "@stylistic/comma-spacing": ["error",{"before":false,"after":true}],
      "@stylistic/no-multi-spaces": ["error",{"ignoreEOLComments":false}],
      "@stylistic/array-bracket-spacing": ["error","never"],
      "@stylistic/array-bracket-newline": ["error","consistent"],
      "@stylistic/object-curly-spacing": ["error","always"],
      "@stylistic/object-curly-newline": ["error",{"multiline":true,"consistent":true}],
      "@stylistic/object-property-newline": ["error",{"allowAllPropertiesOnSameLine":true}],
      "@stylistic/keyword-spacing": "error",
      "@stylistic/brace-style": ["error","1tbs",{"allowSingleLine":true}],
      "@stylistic/space-before-blocks": "error",
      "curly": ["error","multi-line","consistent"],
      "@stylistic/member-delimiter-style": "error",
      "@stylistic/semi": ["error","always"],
      "@stylistic/max-len": ["error",{"code":150,"ignoreUrls":true,"ignoreStrings":true,"ignoreTemplateLiterals":true,"ignoreComments":true,"ignoreRegExpLiterals":true}],
      "@stylistic/quote-props": ["error","consistent-as-needed"]
    }
  },
  {
    ignores: ["*.js", "*.d.ts", "node_modules/", "*.generated.ts", "coverage"]
  }
];"
`;

exports[`snapshot enable prettier 1`] = `
"
import globals from "globals";
import tseslint from "typescript-eslint"
import importPlugin from "eslint-plugin-import"
import eslint from "@eslint/js"
import prettierConfig from "eslint-config-prettier"    

/** @type {import('eslint').Linter.Config[]} */
export default [
  eslint.configs.recommended,
  importPlugin.flatConfigs.typescript,
  prettierConfig,
  {
    files: ["**/*.ts", "**/*.tsx"],
    languageOptions: { 
      globals: {
        ...globals.node,
        ...globals.jest,
      },
      parser: tseslint.parser,
      parserOptions: {
        ecmaVersion: 2018,
        sourceType: "module",
        project: "./tsconfig.json",
      },
    },
    settings: {
      "import/parsers": {
        "@typescript-eslint/parser": [".ts", ".tsx"],
      },
      "import/resolver": {
        typescript: {
          project: "./tsconfig.json",
          alwaysTryTypes: true,
        }
      },
    },
    plugins: {
      "@typescript-eslint": tseslint,
      "import": importPlugin
    },
    rules: {
      "@typescript-eslint/no-require-imports": "error",
      "import/no-extraneous-dependencies": ["error",{"devDependencies":[],"optionalDependencies":false,"peerDependencies":true}],
      "import/no-unresolved": "error",
      "import/order": ["warn",{"groups":["builtin","external"],"alphabetize":{"order":"asc","caseInsensitive":true}}],
      "import/no-duplicates": "error",
      "no-shadow": "off",
      "@typescript-eslint/no-shadow": "error",
      "@stylistic/key-spacing": "error",
      "@stylistic/no-multiple-empty-lines": "error",
      "@typescript-eslint/no-floating-promises": "error",
      "no-return-await": "off",
      "@typescript-eslint/return-await": "error",
      "@stylistic/no-trailing-spaces": "error",
      "dot-notation": "error",
      "no-bitwise": "error",
      "@typescript-eslint/member-ordering": ["error",{"default":["public-static-field","public-static-method","protected-static-field","protected-static-method","private-static-field","private-static-method","field","constructor","method"]}]
    }
  },
  {
    ignores: ["*.js", "*.d.ts", "node_modules/", "*.generated.ts", "coverage"]
  }
];"
`;

exports[`snapshot override setting 1`] = `
"
import globals from "globals";
import tseslint from "typescript-eslint"
import importPlugin from "eslint-plugin-import"
import eslint from "@eslint/js"
import prettierConfig from "eslint-config-prettier"    

/** @type {import('eslint').Linter.Config[]} */
export default [
  eslint.configs.recommended,
  importPlugin.flatConfigs.typescript,
  prettierConfig,
  {
    files: ["**/*.ts", "**/*.tsx"],
    languageOptions: { 
      globals: {
        ...globals.node,
        ...globals.jest,
      },
      parser: tseslint.parser,
      parserOptions: {
        ecmaVersion: 2018,
        sourceType: "module",
        project: "./tsconfig.json",
      },
    },
    settings: {
      "import/parsers": {
        "@typescript-eslint/parser": [".ts", ".tsx"],
      },
      "import/resolver": {
        typescript: {
          project: "./tsconfig.json",
          alwaysTryTypes: true,
        }
      },
    },
    plugins: {
      "@typescript-eslint": tseslint,
      "import": importPlugin
    },
    rules: {
      "@typescript-eslint/no-require-imports": "error",
      "import/no-extraneous-dependencies": ["error",{"devDependencies":[],"optionalDependencies":false,"peerDependencies":true}],
      "import/no-unresolved": "error",
      "import/order": ["warn",{"groups":["builtin","external"],"alphabetize":{"order":"asc","caseInsensitive":true}}],
      "import/no-duplicates": "error",
      "no-shadow": "off",
      "@typescript-eslint/no-shadow": "error",
      "@stylistic/key-spacing": "error",
      "@stylistic/no-multiple-empty-lines": "error",
      "@typescript-eslint/no-floating-promises": "error",
      "no-return-await": "off",
      "@typescript-eslint/return-await": "error",
      "@stylistic/no-trailing-spaces": "error",
      "dot-notation": "error",
      "no-bitwise": "error",
      "@typescript-eslint/member-ordering": ["error",{"default":["public-static-field","public-static-method","protected-static-field","protected-static-method","private-static-field","private-static-method","field","constructor","method"]}]
    }
  },
  {
    languageOptions: {
      parser: tseslint.parser
    },
    files: ["projenrc.ts"],
    rules: {
      "@typescript-eslint/no-require-imports": "off",
      "import/no-extraneous-dependencies": "off"
    }
  }
  {
    ignores: ["*.js", "*.d.ts", "node_modules/", "*.generated.ts", "coverage"]
  }
];"
`;
